RESOLVED FIXED57576
File mappings used by read-write SharedMemory objects aren't correctly marked as read-write after being sent over a CoreIPC::Connection
https://bugs.webkit.org/show_bug.cgi?id=57576
Summary File mappings used by read-write SharedMemory objects aren't correctly marked...
Adam Roben (:aroben)
Reported 2011-03-31 14:04:39 PDT
File mappings used by read-write SharedMemory objects aren't correctly marked as read-write after being sent over a CoreIPC::Connection
Attachments
Patch (1.97 KB, patch)
2011-03-31 14:05 PDT, Adam Roben (:aroben)
bweinstein: review+
Adam Roben (:aroben)
Comment 1 2011-03-31 14:05:04 PDT
WebKit Review Bot
Comment 2 2011-03-31 14:07:25 PDT
Attachment 87784 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/ChangeLog:3: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 3 2011-03-31 14:10:46 PDT
Note You need to log in before you can comment on or make changes to this bug.